[feat/html-css] create main and #content-main

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Team Members</title>
     <!-- LINK CSS -->
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <main>
+      <div id="content-main">
+        
+      </div>
+    </main>
+
     <!-- LINK JS -->
     <script src="./js/script.js"></script>
   </body>
