[feat/html-css] create inner element in #content-main

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <body>
     <main>
       <div id="content-main">
-        
+        <h1>Meet our Team</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit illo molestiae iusto consectetur optio, nulla quisquam? Enim, ullam. Magni, recusandae suscipit! Voluptas velit laboriosam voluptatum ratione itaque commodi deleniti distinctio!</p>
+        <div id="cards-container">
+            
+        </div>  
       </div>
     </main>
 
