--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     <main>
       <div id="content-main">
         <h1>Meet our Team</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit illo molestiae iusto consectetur optio, nulla quisquam? Enim, ullam. Magni, recusandae suscipit! Voluptas velit laboriosam voluptatum ratione itaque commodi deleniti distinctio!</p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit illo
+          molestiae iusto consectetur optio, nulla quisquam? Enim, ullam. Magni,
+          recusandae suscipit! Voluptas velit laboriosam voluptatum ratione
+          itaque commodi deleniti distinctio!
+        </p>
         <div id="cards-container">
-            
-        </div>  
+          <div class="card"></div>
+        </div>
       </div>
     </main>
 
