[feat] remove all debug elements and fill the first .card

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
           itaque commodi deleniti distinctio!
         </p>
         <div id="cards-container">
-          <div class="card"></div>
+          <div class="card">
+            <img src="./img/male1.png" alt="Marco Bianchi">
+            <div class="description">
+                <h3>Marco Bianchi</h3>
+                <span class="occupation">Designer</span>
+                <a href="email">marcobianchi@team.com</a>
+            </div>
+          </div>
         </div>
       </div>
     </main>
