--- a/index.html
+++ b/index.html
@@ -17,16 +17,7 @@
           recusandae suscipit! Voluptas velit laboriosam voluptatum ratione
           itaque commodi deleniti distinctio!
         </p>
-        <div id="cards-container">
-          <div class="card">
-            <img src="./img/male1.png" alt="Marco Bianchi">
-            <div class="description">
-                <h3>Marco Bianchi</h3>
-                <span class="occupation">Designer</span>
-                <a href="email">marcobianchi@team.com</a>
-            </div>
-          </div>
-        </div>
+        <div id="cards-container"></div>
       </div>
     </main>
 
